[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/Stack.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Level.gd" type="Script" id=2]
[ext_resource path="res://src/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/FadeOut.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Fire.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/bucket.glb" type="PackedScene" id=6]
[ext_resource path="res://assets/scythe.glb" type="PackedScene" id=7]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.486275, 0.266667, 0.266667, 1 )

[sub_resource type="PlaneMesh" id=1]
material = SubResource( 2 )
size = Vector2( 3, 3 )

[sub_resource type="SphereMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]
flags_unshaded = true
albedo_color = Color( 1, 0.784314, 0, 1 )

[sub_resource type="ProceduralSky" id=6]
radiance_size = 0
sky_energy = 0.3

[sub_resource type="Environment" id=5]
background_mode = 3
background_sky = SubResource( 6 )
fog_color = Color( 0.501961, 0.6, 0.701961, 1 )

[sub_resource type="CylinderShape" id=7]
height = 3.0
radius = 0.3

[node name="Level" type="Spatial"]
script = ExtResource( 2 )

[node name="Ground" type="MeshInstance" parent="."]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0 )
mesh = SubResource( 1 )

[node name="Grass" type="Spatial" parent="."]

[node name="Player" parent="." instance=ExtResource( 3 )]
transform = Transform( 0.906308, 0, -0.422618, 0, 1, 0, 0.422618, 0, 0.906308, -5.69522, 0, 9.8378 )

[node name="SunHelper" type="Spatial" parent="."]
transform = Transform( 0.965926, -0.0885213, 0.24321, 0, 0.939693, 0.34202, -0.258819, -0.330366, 0.907673, 6.55651e-07, -3.8147e-06, 2.6226e-06 )

[node name="SunSphere" type="MeshInstance" parent="SunHelper"]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, 50 )
cast_shadow = 0
mesh = SubResource( 3 )
skeleton = NodePath("../..")
material/0 = SubResource( 4 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.965926, -0.0885214, 0.24321, 0, 0.939693, 0.34202, -0.258819, -0.330366, 0.907673, 0, 10, 0 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 5 )

[node name="FadeOut" parent="." instance=ExtResource( 4 )]
visible = false

[node name="Objects" type="Spatial" parent="."]

[node name="Fire" parent="Objects" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.39215, 0, -6.82221 )
visible = false

[node name="Stack" parent="Objects" instance=ExtResource( 1 )]
transform = Transform( -0.258819, 0, -0.965926, 0, 1, 0, 0.965926, 0, -0.258819, 0, 0, 0 )
visible = false

[node name="Scythe" parent="Objects/Stack" instance=ExtResource( 7 )]
transform = Transform( 2.38419e-07, -0.517638, -1.93185, 0.70218, 1.80887, -0.484686, 1.87268, -0.678254, 0.181738, 1.75748, 0, 3.74572 )

[node name="Bucket" parent="Objects" instance=ExtResource( 6 )]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, -7.80372, -0.1, -10 )

[node name="StaticBody" type="StaticBody" parent="Objects/Bucket"]

[node name="CollisionShape" type="CollisionShape" parent="Objects/Bucket/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 7 )
